--- a/src/app/client-create/client-create.component.html
+++ b/src/app/client-create/client-create.component.html
@@ -1,56 +1,51 @@
-<div class="row client-row">
-  <div class="col-md-6 col-sm-12">
-    <form name="form" (ngSubmit)="clientForm.form.valid && onSubmit()" #clientForm="ngForm" novalidate>
-      <div class="mt-0">
+<form class="form-group" [formGroup]="clientFormGroup" (ngSubmit)="onSubmit()">
+  <div class="row client-row">
+    <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
 
-        <div class="form-group">
-          <h5>Create Client</h5>
-          <label for="name">Name</label>
-          <input type="text" [(ngModel)]="client.name" class="form-control" name="name" #name="ngModel" [ngClass]="{ 'is-invalid': clientForm.submitted && name.invalid }"
-            required/>
-          <div *ngIf="clientForm.submitted && name.invalid" class="alert alert-danger invalid-feedback">
-            <div *ngIf="name.errors.required">
+      <div class="section">
+        <div class="sectionTitle">New Client</div>
+        <label for="name">Name</label>
+        <div>
+          <input type="text" formControlName="name" class="form-control" required/>
+
+          <div *ngIf="clientFormGroup.controls['name'].invalid && (clientFormGroup.controls['name'].dirty || clientFormGroup.controls['name'].touched)"
+            class="alert alert-danger ng-invalid">
+            <div *ngIf="clientFormGroup.controls['name'].errors.required">
               Name is required.
             </div>
           </div>
         </div>
 
-        <div class="form-group">
-          <label for="name">Email</label>
-          <input type="text" [(ngModel)]="client.email" class="form-control" name="email" #email="ngModel" [ngClass]="{ 'is-invalid': clientForm.submitted && email.invalid }"
-            email/>
-          <div *ngIf="clientForm.submitted && email.invalid" class="invalid-feedback">
-            <div *ngIf="email.errors.email">Email must be a valid email address</div>
+        <div>
+          <label for="email">Email</label>
+          <input type="email" formControlName="email" class="form-control" />
+
+          <div *ngIf="clientFormGroup.controls['email'].invalid && (clientFormGroup.controls['email'].dirty || clientFormGroup.controls['email'].touched)"
+            class="alert alert-danger ng-invalid">
+            <div *ngIf="clientFormGroup.controls['email'].errors.invalidEmail">
+              Email is not valid.
+            </div>
           </div>
         </div>
 
-        <div class="form-group">
-          <label for="name">Phone</label>
-          <input type="text" [(ngModel)]="client.phone" class="form-control" name="phone" #phone="ngModel" [ngClass]="{ 'is-invalid': clientForm.submitted && phone.invalid }"/>
-          <div *ngIf="clientForm.submitted && phone.invalid" class="invalid-feedback">
-            <div *ngIf="phone.errors.email">Phone must be a valid US phone number</div>
+        <div>
+          <label for="phone">Phone</label>
+          <input type="text" formControlName="phone" class="form-control" />
+
+          <div *ngIf="clientFormGroup.controls['phone'].invalid && (clientFormGroup.controls['phone'].dirty || clientFormGroup.controls['phone'].touched)"
+            class="alert alert-danger ng-invalid">
+            <div *ngIf="clientFormGroup.controls['phone'].errors.invalidPhone">
+              Phone is not valid.
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="name">Social Handle</label>
-          <input type="text" [(ngModel)]="client.socialHandle" class="form-control" name="socialHandle" id="socialHandle">
-        </div>
-        <div class="form-group">
-          <label for="name">Social Network</label>
-          <select [(ngModel)]="client.socialType" class="form-control" name="socialType" id="socialType">
-            <option *ngFor="let type of socialTypes" [value]="type">{{type}}</option>
-          </select>
-        </div>
       </div>
-      <div class="col-md-6 col-sm-12">
-        <h5 class="mt-0">
-          Actions
-        </h5>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary" [disabled]="!clientForm.form.valid">Create Client</button>
-        </div>
-        <div [routerLink]="['/clients']">cancel</div>
+
+      <div class="section actions">
+        <button type="submit" class="btn btn-primary" [disabled]="!clientFormGroup.valid">Create Client</button>
+        <button class="btn btn-light" [routerLink]="['/clients']">Cancel</button>
       </div>
-    </form>
+    </div>
+
   </div>
-</div>
+</form>
