--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,22 +1,25 @@
 <div class="row">
-    <div class="col">
-        <h3>{{title}}</h3>
-        <ul id="thumbnailsList">
-            <li *ngFor="let client of clients.items">
-                <a [routerLink]="['/client', client.sys.id]">
-                    <h2>{{ client.fields.name }}</h2>
-                </a>
-                <p *ngIf="client.fields.email">{{ client.fields.email }}</p>
-                <p *ngIf="client.fields.phone">{{ client.fields.phone }}</p>
-                <p *ngIf="client.fields.socialHandle">{{ client.fields.socialHandle }}<span *ngIf="client.fields.socialType">
-                    on {{ client.fields.socialType }}</span></p>
-            </li>
-        </ul>
-    </div>
-    <div class="col-md-6 col-sm-12">
-            <h5 class="mt-0">
-                Actions
-            </h5>
-            <div [routerLink]="['/client-create']">Add Client</div>
+    <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
+        <div class="section">
+            <div class="sectionTitle">{{title}}</div>
+            <ul id="thumbnailsList">
+                <li *ngFor="let client of clients.items">
+                    <div class="clientCard">
+                        <div [routerLink]="['/client', client.sys.id]">
+                            <h5>{{ client.fields.name }}</h5>
+                        </div>
+                        <div *ngIf="client.fields.email" class="clientDetail">{{ client.fields.email }}</div>
+                        <div *ngIf="client.fields.phone" class="clientDetail">{{ client.fields.phone }}</div>
+                    </div>
+                </li>
+            </ul>
         </div>
+    </div>
+
+    <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
+        <div class="section">
+            <div class="sectionTitle">Actions</div>
+            <button class="btn btn-primary" [routerLink]="['/client-create']">Add Client</button>
+        </div>
+    </div>
 </div>
