--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,18 +1,22 @@
-<h3>Projects</h3>
 <div class="row">
-    <ul  id="thumbnailsList">
-        <li *ngFor="let project of projects.items">
-                <!-- the routerLink bind results in a URL path like "/project/3" where 3 is the id value for the client of the *ngFor directive -->
-                <a [routerLink]="['/project', project.sys.id]">
-                    <span *ngIf="project.fields.finalImage; else inProgressBlock">
-                        <img src="{{project.fields.finalImage.fields.file.url}}" class="tn" width="200" height="160">
-                    </span>
-                    <ng-template #inProgressBlock>
-                        <span>
-                            <img src="{{project.fields.assets[0].fields.file.url}}" class="tn" width="200" height="160">
+    <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
+        <div class="section">
+            <div class="sectionTitle">Projects</div>
+            <ul id="thumbnailsList">
+                <li *ngFor="let project of projects.items">
+                    <!-- the routerLink bind results in a URL path like "/project/3" where 3 is the id value for the client of the *ngFor directive -->
+                    <a [routerLink]="['/project', project.sys.id]">
+                        <span *ngIf="project.fields.finalImage; else inProgressBlock">
+                            <img src="{{project.fields.finalImage.fields.file.url}}" class="tn" width="200" height="160">
                         </span>
-                    </ng-template>
-                </a>
-            </li>
-    </ul>
+                        <ng-template #inProgressBlock>
+                            <span>
+                                <img src="{{project.fields.assets[0].fields.file.url}}" class="tn" width="200" height="160">
+                            </span>
+                        </ng-template>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
