--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,49 @@ body {
 .main-content {
     color: #333;
 }
+label {
+    font-size: 0.75rem;
+}
+
+
+/* FORMS: validation messages */
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+}
+  
+.ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; /* red */
+}
+
+.ng-pending  {}
+.ng-pristine {}
+.ng-dirty {}
+.ng-untouched {}
+.ng-touched {}
+
+/* FORMS: placement, spacing*/
+.section {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.sectionTitle {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+.actions {
+    margin-top: 10px;
+    margin-left: 15px;
+}
+.btn {
+    margin-right: 10px;
+}
+.data {
+    /* intended to wrap the data or input field for alignment */
+    /*margin-left: 20px;*/
+}
+
+
+
